Added confirmation dialog before deleting a profile, made the last textbox in the wizard read only

--- a/ui/wizard/ui_stdm_config.ui
+++ b/ui/wizard/ui_stdm_config.ui
@@ -1151,6 +1151,9 @@
         <verstretch>1</verstretch>
        </sizepolicy>
       </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
