--- a/ui/wizard/ui_stdm_config.ui
+++ b/ui/wizard/ui_stdm_config.ui
@@ -32,7 +32,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>STDM Profile Wizard</string>
+   <string>Configuration Wizard</string>
   </property>
   <property name="modal">
    <bool>true</bool>
