--- a/ui/wizard/ui_lookup_entity.ui
+++ b/ui/wizard/ui_lookup_entity.ui
@@ -6,17 +6,30 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>363</width>
-    <height>94</height>
+    <width>362</width>
+    <height>86</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Lookup entity</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
-   <property name="verticalSpacing">
-    <number>10</number>
+   <property name="sizeConstraint">
+    <enum>QLayout::SetMaximumSize</enum>
    </property>
+   <item row="0" column="1">
+    <widget class="QLabel" name="label_2">
+     <property name="maximumSize">
+      <size>
+       <width>300</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>`check_` prefix will be appended on the lookup name</string>
+     </property>
+    </widget>
+   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label">
      <property name="minimumSize">
@@ -44,13 +57,6 @@
      </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>`check_` prefix will be appended on the lookup name</string>
      </property>
     </widget>
    </item>
