--- a/ui/wizard/ui_dtime_property.ui
+++ b/ui/wizard/ui_dtime_property.ui
@@ -6,18 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>341</width>
+    <width>340</width>
     <height>233</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Datetime properties</string>
   </property>
-  <layout class="QFormLayout" name="formLayout">
-   <property name="verticalSpacing">
-    <number>20</number>
-   </property>
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Minimum</string>
@@ -69,7 +66,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
       <string>Maximum</string>
@@ -127,7 +124,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
+   <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="layoutDirection">
       <enum>Qt::LeftToRight</enum>
