Fixed View STR web map

--- a/ui/ui_view_str.ui
+++ b/ui/ui_view_str.ui
@@ -194,6 +194,12 @@
         </item>
         <item row="0" column="0">
          <widget class="QGroupBox" name="groupBox_3">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="title">
            <string>Spatial Unit Preview:</string>
           </property>
