--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -40,8 +40,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>588</width>
-        <height>448</height>
+        <width>592</width>
+        <height>459</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -133,7 +133,7 @@
              <number>500</number>
             </property>
             <property name="readOnly">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
@@ -156,7 +156,7 @@
              <number>500</number>
             </property>
             <property name="readOnly">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
